<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.hiddenbrains.calc.Activities.InterestCalcActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/simpleInterest"
            android:text="@string/simple"
            style="@style/InterestCalcTextView">
        </TextView>

        <TextView
            android:id="@+id/compundInterest"
            android:text="@string/compound"
            style="@style/InterestCalcTextView" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/lightgrey" />

    <TextView
        android:id="@+id/CompoundInterest"
        android:text="@string/compound"
        style="@style/InterestCalcTextView"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:weightSum="1">
        <EditText
            android:layout_marginTop="30dp"
            android:hint="@string/enterprincipleamount"
            android:id="@+id/interestprincipleamount"
            style="@style/InterestCalcEditText"
            android:layout_width="match_parent"
            android:layout_weight="0.06" />

        <Spinner
            android:id="@+id/interestPrecentageCalculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="30dp"></Spinner>

        <EditText
            android:hint="@string/interestpercentage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/interesetpercentage"
            style="@style/InterestCalcEditText"
            android:layout_weight="0.09" />

        <EditText
            android:hint="@string/taxpercentage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/taxpercentage"
            style="@style/InterestCalcEditText"
            android:layout_weight="0.09" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
            android:hint="@string/time"
            android:layout_height="44dp"
            android:layout_width="wrap_content"
            android:id="@+id/interesttime"
            android:layout_marginRight="4dp"
            style="@style/InterestCalcEditText"
                android:layout_weight="0.54" />

            <TextView
                android:text="@string/text"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:id="@+id/textview" />
        </LinearLayout>

        <Button
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>
</LinearLayout>
